Bug 324728 - "Configure..." button can be enabled when "System Settings" (for "Use anti-aliasing:") is enabled
Summary: "Configure..." button can be enabled when "System Settings" (for "Use anti-a...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_fonts (other bugs)
Version First Reported In: 4.11.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL: http://docs.kde.org/stable/en/kde-wor...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-10 00:02 UTC by Gérard Talbot (no longer involved)
Modified: 2014-07-09 19:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gérard Talbot (no longer involved) 2013-09-10 00:02:27 UTC
It seems that "Use anti-aliasing: System Settings" is actually using a configuration that may be not known to the user. There may be 2 bugs here.



Reproducible: Always

Steps to Reproduce:
In Fonts settings, 
1- Click "Adjust All Fonts..." button and then set, say, size to 11
2- Set "Use anti-aliasing:" to "Enabled" value
3- Set "Configure..." so that 
a) "Exclude range" checkbox is UNchecked
b) "Use sub-pixel rendering:" checkbox is UNchecked
c) Hinting style to Medium
You want here to have the same values as in the picture at
http://docs.kde.org/stable/en/kde-workspace/kcontrol/fonts/index.html#fonts-aa
4- Click the OK button and then click the Apply button (toward lower-right corner) of parent window (KDE Control Module FONTS)
5- Click the Defaults button (toward lower-left corner) of KDE Control Module FONTS window

Actual Results:  
The "Configure..." button is enabled and will indicate (after clicking on it) that Exclude range checkbox is CHECKED with 8.0pt to 15pt selected. This seems to contradict the documentation.

Expected Results:  
The "Configure..." button should be DISabled, otherwise the "Exclude range" and  "Use sub-pixel rendering:" and Hinting style value should all be read-only.

http://docs.kde.org/stable/en/kde-workspace/kcontrol/fonts/index.html#fonts-aa
"
Default anti-aliasing settings are those used system wide by your distribution and labelled System Settings. 
"
http://docs.kde.org/stable/en/kde-workspace/kcontrol/fonts/index.html#fonts-aa

This does not tell me if default anti-aliasing settings as set by my distribution makes anti-aliasing ENabled or DISabled and, if it is enabled, then what are the anti-aliasing settings (like does it exclude a range, if hinting is slight or medium, etc).

When the user chooses "Use anti-aliasing: System Settings", then the user should know (or should be able to figure out), should see, should be able to figure out if hinting style is medium or not, if there is an exclusion for a font-size range. The associated input text boxes should then be read-only.

There may be more than 1 defined, delimited kind of issue in this bug report.

I am using
Kubuntu 13.04 (raring)
Linux 3.8.0-30-generic i686 (32bits)
KDE Development plate-form: 4.11.1
Qt: 4.8.4

Many thanks to Felix Miata for helping me figure out several elements of this bug report.
Comment 1 Andrea Iacovitti 2014-07-09 19:39:08 UTC
Git commit 238b466af286284dc3fd2c1e4db2cb322b2d0f60 by Andrea Iacovitti.
Committed on 09/07/2014 at 19:34.
Pushed by aiacovitti into branch 'KDE/4.11'.

Fix restoring default configuration.
Connect anti-aliasing combobox to currentIndexChanged signal.

REVIEW: 117957
FIXED-IN: 4.11.11

M  +8    -6    kcontrol/fonts/fonts.cpp

http://commits.kde.org/kde-workspace/238b466af286284dc3fd2c1e4db2cb322b2d0f60
Comment 2 Andrea Iacovitti 2014-07-09 19:55:32 UTC
Git commit af5493f4f39c64886b96b06dab92a9bb2400fdf8 by Andrea Iacovitti.
Committed on 09/07/2014 at 19:53.
Pushed by aiacovitti into branch 'master'.

Fix restoring default configuration.
Connect anti-aliasing combobox to currentIndexChanged signal.

REVIEW: 117957

M  +7    -6    kcms/fonts/fonts.cpp

http://commits.kde.org/plasma-desktop/af5493f4f39c64886b96b06dab92a9bb2400fdf8