Fix restoring default configuration. Connect anti-aliasing combobox to currentIndexChanged signal.

REVIEW: 117957
BUG: 324728